# fastapp

./: .gitignore  README.md
llm-utils/: test-ports.py
templates/: .gitignore
templates/fastapi-react/: .gitignore  Dockerfile  HOW_TO_UPDATE.md  INSTRUCTIONS.md  initialize.sh
templates/fastapi-react/backend/: .env.example  alembic.ini  pyproject.toml
templates/fastapi-react/backend/alembic/: env.py
templates/fastapi-react/backend/alembic/versions/: 001_initial_migration.py
templates/fastapi-react/backend/app/: main.py
templates/fastapi-react/backend/app/core/: config.py
templates/fastapi-react/backend/app/db/: base.py  session.py
templates/fastapi-react/backend/app/modules/widgets/: api.py  models.py  schemas.py  services.py
templates/fastapi-react/frontend/: README  package-lock.json  package.json  tsconfig.json
templates/fastapi-react/frontend/public/: index.html
templates/fastapi-react/frontend/src/: App.tsx  StyledComponents.tsx  theme.ts
templates/fastapi-react/frontend/src/components/: ErrorBoundary.tsx  NotFound.tsx
templates/fastapi-react/frontend/src/components/Layout/: Layout.tsx  LeftNav.tsx  SubNav.tsx  TopNav.tsx
templates/fastapi-react/frontend/src/features/home/pages/: HomePage.tsx
templates/fastapi-react/frontend/src/features/widgets/: api.ts
templates/fastapi-react/frontend/src/features/widgets/components/: WidgetADetail.tsx  WidgetAForm.tsx  WidgetAList.tsx  WidgetBDetail.tsx  WidgetBForm.tsx  WidgetBList.tsx
templates/fastapi-react/frontend/src/types/: index.ts
(+2 files in other folders)
