[tool.poetry]
name = "fastapi-react-template"
version = "0.1.0"
description = "A template for FastAPI and React applications"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.15.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.5.2"
alembic = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"